--- a/index.html
+++ b/index.html
@@ -441,16 +441,16 @@
 
 
         <div class="container-footer">
-            <ul class="foote_bottom_ul_amrc">
+            <ul class="footer_bottom_ul">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Pricing</a></li>
+
+                <li><a href="#">Find us</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <!--footer_bottom_ul_amrc ends here-->
-            <p class="text-center">Copyright @2022 | Designed With by <a href="#">Fashion Zone</a></p>
+            <p class="text-center">Copyright @2023 | Designed With by <a href="#">Fashion Zone</a></p>
 
             <ul class="social_footer_ul">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -462,10 +462,6 @@
         </div>
 
     </footer>
-
-
-
-
 
 
 
